# SoundEffect-Search

./: .gitignore  Makefile  README.md  app.py  config.yaml  pyproject.toml  scrape.py
.github/workflows/: linter.yml
src/: create_embed.py  scrape.py  search.py
